Posting Activity 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,9 @@
         <activity
             android:name=".FirebaseUIActivity"
             android:label="@string/label_firebase_ui" />
-    </application>
+        <activity android:name=".Posting"></activity>
+
+</application>
 
 
 </manifest>
