--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,13 +37,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomeFeed"></activity>
+        <activity android:name=".HomeFeed" />
         <activity
             android:name=".FirebaseUIActivity"
             android:label="@string/label_firebase_ui" />
-        <activity android:name=".Posting"></activity>
-
-</application>
-
+        <activity android:name=".Posting" />
+        <activity android:name=".MyMenu"></activity>
+    </application>
 
 </manifest>
