--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
     //for authentication
     implementation 'com.firebaseui:firebase-ui-auth:4.3.2'
 
