Intent putExtra를 활용한 detaildPost로 data 옮기기

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
             android:label="@string/label_firebase_ui" />
         <activity android:name=".Posting" />
         <activity android:name=".MyMenu"></activity>
+        <activity android:name=".DetailedPost"></activity>
     </application>
 
 </manifest>
