Manifest 파일에 액티비티 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,8 +42,9 @@
             android:name=".FirebaseUIActivity"
             android:label="@string/label_firebase_ui" />
         <activity android:name=".Posting" />
-        <activity android:name=".MyMenu"></activity>
-        <activity android:name=".DetailedPost"></activity>
+        <activity android:name=".MyMenu" />
+        <activity android:name=".DetailedPost" />
+        <activity android:name=".EnterDetailed" android:theme="@android:style/Theme.Dialog"></activity>
     </application>
 
 </manifest>
