좋아하는 게시글 모아보기 기능

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
         <activity android:name=".PostActivities.Posting" />
         <activity android:name=".MyMenu" />
         <activity android:name=".PostActivities.DetailedPost" />
+        <activity android:name=".LikingPosts" />
         <activity
             android:name=".StartAppActivities.EnterDetailed"
             android:theme="@android:style/Theme.Dialog" />
