내가 쓴 글 모아서 보기 기능 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
         <activity android:name=".MyMenu" />
         <activity android:name=".PostActivities.DetailedPost" />
         <activity android:name=".LikingPosts" />
+        <activity android:name=".MyPosts" />
         <activity
             android:name=".StartAppActivities.EnterDetailed"
             android:theme="@android:style/Theme.Dialog" />
