--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,16 +46,16 @@
             android:name=".StartAppActivities.FirebaseUIActivity"
             android:label="@string/label_firebase_ui" />
         <activity android:name=".PostActivities.Posting" />
-        <activity android:name=".MyMenu" />
+        <activity android:name=".MyMenuActivities.MyMenu" />
         <activity android:name=".PostActivities.DetailedPost" />
-        <activity android:name=".LikingPosts" />
-        <activity android:name=".MyPosts" />
+        <activity android:name=".MyMenuActivities.LikingPosts" />
+        <activity android:name=".MyMenuActivities.MyPosts" />
         <activity
             android:name=".StartAppActivities.EnterDetailed"
             android:theme="@android:style/Theme.Dialog" />
-        <activity android:name=".MyMessages" />
-        <activity android:name=".SendMessage" />
-        <activity android:name=".DetailedMessage"></activity>
+        <activity android:name=".MyMenuActivities.MyMessages" />
+        <activity android:name=".MessageActivities.SendMessage" />
+        <activity android:name=".MessageActivities.DetailedMessage"></activity>
         <service
             android:name=".Service.MyFirebaseMessagingService">
             <intent-filter>
